# adjoint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/adjoint/: __init__.py  cli.py  config.py  install.py  log.py  paths.py
src/adjoint/bundled/: settings.hooks.json  settings.mcp.json
src/adjoint/bundled/policies/: log_only.py  no_writes_outside_repo.py  safe_bash.py
src/adjoint/hooks/: __init__.py  _flush_spawn.py  _runtime.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  user_prompt.py
src/adjoint/mcp/: __init__.py  server.py
src/adjoint/memory/: __init__.py  _shared.py  agent.py  compile.py  extractor.py  flush.py  index.py  lint.py  norn.py  query.py  redact.py  state.py
src/adjoint/policies/: __init__.py  loader.py  types.py
src/adjoint/providers/: __init__.py  base.py  claude.py  codex.py  detect.py
src/adjoint/store/: __init__.py  files.py  models.py  postgres.py  sqlite.py
src/adjoint/store/migrations/: 001_initial.sql
tests/: conftest.py  fake_agent.py  test_events_tail.py  test_hook_post_tool_use.py  test_hook_pre_tool_use.py  test_hook_session_start.py  test_hook_user_prompt.py  test_hooks_runtime.py  test_install.py  test_memory_compile.py  test_memory_flush.py  test_memory_index.py  test_memory_lint.py  test_memory_norn.py  test_memory_state.py  test_paths.py  test_policies_loader.py  test_postgres_store.py  test_redact.py  test_security.py
